# rinha-de-backend-2024-q1-flask

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  script.sql
api/: main.py
api/adapters/: database.py
api/dtos/: cliente.py
